# cookiecutter_fastAPI

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.env  docker-compose.yml  pyproject.toml
cookiecutter_fastAPI/: config.py  main.py
cookiecutter_fastAPI/api/: rule.py
cookiecutter_fastAPI/api/base/: app.py  event.py  exceptions.py  router.py
cookiecutter_fastAPI/api/views/index/: __init__.py
cookiecutter_fastAPI/api/views/task/: __init__.py
cookiecutter_fastAPI/config/: __init__.py  config.py  json_dumps.py  log.py
cookiecutter_fastAPI/lib/: __init__.py  json.py
cookiecutter_fastAPI/lib/async_scheduler/: __init__.py
cookiecutter_fastAPI/lib/celery/: __init__.py
cookiecutter_fastAPI/lib/database/: __init__.py
cookiecutter_fastAPI/lib/format_time/: __init__.py
cookiecutter_fastAPI/lib/json/: __init__.py  dumps.py  dumps_default.py
cookiecutter_fastAPI/lib/log/: __init__.py  __init__.pyi
cookiecutter_fastAPI/lib/postgresql/: __init__.py
cookiecutter_fastAPI/lib/redis/: __init__.py
cookiecutter_fastAPI/models/base/: base_error.py  base_model.py  base_response.py
cookiecutter_fastAPI/worker/: celery_worker.py
cookiecutter_fastAPI/worker/task/: test.py
